# tracingpaper

./: .gitignore  main.py  pyproject.toml  ruff.toml
tracingpaper/adapter/inbound/: scan.py
tracingpaper/adapter/outbound/: gui.py  image.py  ocr.py
tracingpaper/application/port/: inbound.py  outbound.py
tracingpaper/application/service/: gui.py  image.py  ocr.py
tracingpaper/domain/: ocr.py
