[tool.poetry]
name = "tracingpaper"
version = "0.1.0"
description = ""
authors = ["cookieshake <cookieshake.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
injector = "0.21.0"
opencv-python = "4.8.1.78"
pydantic = "2.4.2"
pytesseract = "0.3.10"
easyocr = "1.7.1"
imutils = "^0.5.4"
transformers = "4.34.0"
fugashi = "1.3.0"
unidic-lite = "1.0.8"
jaconv = "0.3.4"
typer = {version = "0.9.0", extras = ["all"]}
mss = "9.0.1"
flet = "0.10.3"


[tool.poetry.group.dev.dependencies]
pytest = "7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
